<resources>
    <string name="app_name" translatable="false">ToBeClean</string>

    <string name="my_places">My Places</string>
    <string name="add_to_my_places">Add to Favorites</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="search" translatable="false">search</string>
    <string name="Hint_for_tvSearch">Enter Address, City</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

    <string name="permission_message" translatable="false">permission message</string>
    <string name="place_details" translatable="false">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="selected_place" translatable="false">Last Selected Place:</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="yellowstar" translatable="false">YellowStar</string>
    <string name="yellowshare" translatable="false">yellowShare</string>

    <string name="paperrecyclingicon" translatable="false">PaperRecyclingIcon</string>
    <string name="boxrecyclingicon" translatable="false">boxRecyclingIcon</string>
    <string name="glassrecyclingicon" translatable="false">GlassRecyclingIcon</string>
    <string name="plasticsrecyclingicon" translatable="false">plasticsRecyclingIcon</string>
    <string name="clothesrecyclingicon" translatable="false">clothes</string>
    <string name="electricalrecyclingicon" translatable="false">electrical</string>

</resources>
