<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="?android:attr/searchIcon"
        app:showAsAction="always"
        android:id="@+id/bMenuSearch"
        android:title="@string/search"
        tools:targetApi="lollipop" />
    <item
        android:icon="@android:drawable/ic_menu_mylocation"
        android:id="@+id/my_places"
        android:title="@string/my_places" />
    <item
        android:icon="?android:attr/textSelectHandle"
        android:id="@+id/add_to_my_places"
        android:title="@string/add_to_my_places" />
    <item
        android:icon="@android:drawable/ic_menu_preferences"
        android:id="@+id/settings"
        android:title="@string/settings" />
    <item
        android:icon="?android:attr/actionModeCloseDrawable"
        android:id="@+id/exit_form_app"
        android:title="@string/exit" />
</menu>